--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -346,11 +346,14 @@
                     <li class="page-item" th:if="${responseDTO.prev}">
                         <a class="page-link" th:data-num="${responseDTO.start}-1"><i
                                 class="bi bi-caret-left-fill"></i></a></li>
-                    <th:block th:each="i: ${#numbers.sequence(responseDTO.start, responseDTO.end)}">
+
+                    <th:block
+                            th:each="i: ${#numbers.sequence(responseDTO.start, responseDTO.end)}">
                         <li th:class="${responseDTO.page == i}?'page-item active':'page-item'">
                             <a class="page-link" th:data-num="${i}">[[${i}]]</a>
                         </li>
                     </th:block>
+
                     <li class="page-item" th:if="${responseDTO.next}">
                         <a class="page-link" th:data-num="${responseDTO.end}+1">
                             <i class="bi bi-caret-right-fill"></i></a></li>
