--- a/src/main/resources/templates/admin/report-detail.html
+++ b/src/main/resources/templates/admin/report-detail.html
@@ -23,7 +23,6 @@
         }
 
         .report-detail {
-            border: 1px solid #000;
             padding: 20px;
             width: 500px;
             margin-top: 0px;
@@ -61,7 +60,7 @@
             margin-bottom: 20px;
         }
 
-        #reportContent{
+        #reportContent {
             resize: none;
         }
     </style>
@@ -85,26 +84,38 @@
                 /
                 <th:block th:text="${reportDetail.userId.userId}"></th:block>
             </div>
+
             <!--신고내용-->
             <div>
                 <span class="badge bg-secondary text-white m-1">신고일</span>
                 <th:block th:text="${#dates.format(reportDetail.regDate, 'yyyy-MM-dd')}"></th:block>
             </div>
             <div>
+
+                <!--게시글 신고-->
                 <th:block th:if="${reportDetail.postNo != null}">
                     <span class="badge bg-secondary text-white m-1">게시글</span>
-                    <th:block th:text="${reportDetail.postNo.postTitle}"></th:block>
+                    <a th:text="${reportDetail.postNo.postTitle}"
+                       th:href="@{/board/read/{postNo}(postNo=${reportDetail.postNo.postNo})}"
+                       onclick="openPopup(this.href); return false;">
+                    </a>
                 </th:block>
+
+                <!--댓글 신고-->
                 <th:block th:if="${reportDetail.replyNo != null}">
-                    <span class="badge bg-secondary text-white m-1">댓글</span>
-                    <th:block th:text="${reportDetail.replyNo.replyContent}"></th:block>
+                    <span class="badge bg-secondary text-white m-1">댓 &nbsp;&nbsp;글</span>
+                    <a th:text="${reportDetail.replyNo.replyContent}"
+                       th:href="@{/board/read/{postNo}(postNo=${reportDetail.replyNo.postNo.postNo})}"
+                       onclick="openPopup(this.href); return false;">
+                    </a>
                 </th:block>
+
             </div>
         </div>
 
         <!--삭제버튼-->
         <div class="delete-button-container">
-            <button class="btn btn-danger ml-2 btn-sm"
+            <button class="btn btn-danger ml-2"
                     th:onclick="|deleteReportLog(${reportDetail.reportNo})|">삭제
             </button>
         </div>
@@ -132,8 +143,19 @@
         window.close();
     }
 
+    function openPopup(url) {
+        window.open(url, 'popupWindow', 'width=1200,height=900,scrollbars=yes,resizable=yes');
+    }
+
+    /*신고삭제*/
     async function deleteReportLog(reportNo) {
         try {
+            const isConfirmed = confirm(`신고를 삭제하시겠습니까?`);
+
+            if (!isConfirmed) {
+                return; // 사용자가 취소를 누르면 함수 종료
+            }
+
             const response = await fetch(`/admin/deleteReportLog/${reportNo}`, {
                 method: 'POST',
                 headers: {
