--- a/src/main/resources/templates/admin/report-list.html
+++ b/src/main/resources/templates/admin/report-list.html
@@ -14,6 +14,58 @@
         a:hover {
             font-weight: bold;
         }
+        .pagination {
+            width: 1000px;
+            display: flex;
+        }
+
+        .page-item .page-link {
+            color: #000; /* 기본 색상 */
+            background-color: #fff;
+            border: 1px solid #67cafe;
+        }
+
+        .page-item .page-link:hover {
+            background-color: #E8FFFF;
+        }
+
+        .page-item.active .page-link {
+            background-color: #67cafe; /* 활성화된 버튼 배경색 */
+            color: #fff; /* 활성화된 버튼 텍스트 색상 */
+        }
+
+        .countPost1 {
+            background-color: #E8FFFF;
+            border: 1px solid #d5d5d5;
+            border-radius: 0.5rem 0 0 0.5rem;
+            height: 43px;
+            padding: 10px;
+            align-items: center;
+
+        }
+
+        .countPost2 {
+            background-color: #E8FFFF;
+            border: 1px solid #d5d5d5;
+            border-left: white;
+            border-radius: 0;
+            height: 43px;
+            padding: 10px;
+            align-items: center;
+
+        }
+
+        .countPost3 {
+            background-color: #E8FFFF;
+            border: 1px solid #d5d5d5;
+            border-left: white;
+            border-radius: 0 0.5rem 0.5rem 0;
+            height: 43px;
+            padding: 10px;
+            align-items: center;
+
+        }
+
     </style>
 
 
@@ -39,23 +91,26 @@
                     <div class="row g-0 overflow-hidden flex-md-row mb-4 position-relative">
                         <div class="col p-4 d-flex flex-column position-relative">
                             <div class="d-flex justify-content-between">
-                                <div class="d-flex flex-row justify-content-around" style="width: 65%">
 
-                                    <a href="user-list" class="btn btn-outline-secondary align-items-center"
+                                <!--전체회원, 신고목록, 차단회원 이동메뉴-->
+                                <div class="d-flex flex-row justify-content-around" style="width: 65%">
+                                    <a href="user-list"
+                                       class="btn btn-outline-secondary align-items-center countPost1"
                                        type="button" style="width: 40%">
                                         전체 회원
                                     </a>
 
-                                    <a href="report-list" class="btn btn-primary align-items-center" type="button"
-                                       style="width: 40%">
+                                    <a href="report-list"
+                                       class="btn btn-outline-secondary align-items-center countPost2"
+                                       type="button" style="width: 40%; background-color: #67cafe; color: white;">
                                         신고 목록
                                     </a>
 
-                                    <a href="block-list" class="btn btn-outline-secondary align-items-center"
+                                    <a href="block-list"
+                                       class="btn btn-outline-secondary align-items-center countPost3"
                                        type="button" style="width: 40%">
                                         차단 회원
                                     </a>
-
                                 </div>
 
 
@@ -64,7 +119,9 @@
                                       action="/admin/report-list">
                                     <input type="text" class="form-control" name="keyword" placeholder="검색어 입력"
                                            th:value="${searchKeyword}">
-                                    <button class="btn btn-outline-secondary searchBtn" type="submit">검색</button>
+                                    <button class="btn btn-outline-secondary searchBtn"  type="submit">
+                                        <i class="bi bi-search"></i>
+                                    </button>
                                 </form>
 
                             </div>
@@ -75,17 +132,27 @@
                                         <div class="d-flex gap-2 w-100 justify-content-between">
 
                                             <div>
-                                                <a style="cursor: pointer; color: inherit; text-decoration: none;"
+                                                <!--신고제목-->
+                                                <a style="cursor: pointer; color: inherit; text-decoration: none; font-size: large"
                                                    class="my-2"
-                                                   th:text="${user.reportTitle}"
                                                    th:onclick="|openReportDetailPopup('${user.reportNo}')|">
-                                                    <b></b>
+                                                    <b>
+                                                        <!-- 게시글/댓글 신고 표시 -->
+                                                        <span th:if="${user.post != null}">
+                                                            <span style="background-color:#67cafe; color: white; padding: 2px 6px; border-radius: 3px;">게시글신고</span>
+                                                            <span th:text="${user.reportTitle}"></span>
+                                                        </span>
+                                                        <span th:if="${user.reply != null}">
+                                                            <span style="background-color:#67cafe; color: white; padding: 2px 6px; border-radius: 3px;">댓글신고</span>
+                                                            <span th:text="${user.reportTitle}"></span>
+                                                        </span>
+                                                    </b>
                                                 </a>
 
 
                                                 <!--신고자정보-->
-                                                <div class="d-flex justify-content-around h11">
-                                                    <span class="m-1 pr-2 opacity-75 bg-secondary text-white border">신고자</span>
+                                                <div class="d-flex justify-content-around h11" style="margin-top: 15px;">
+                                                    <span class="m-1 pr-2 opacity-75 badge bg-secondary text-white border">신고자</span>
                                                     <span class="m-1 pr-2 opacity-75"
                                                           th:text="${user.userId.userId}"></span>
                                                     <span class="m-1 pr-2 opacity-75"
@@ -96,11 +163,21 @@
 
 
                                             </div>
+
                                             <div class="d-flex flex-column justify-content-between gap-3">
+                                                <!--차단버튼-->
+                                                <button class="btn border-danger fw-bold"
+                                                        th:onclick="blockUser([[${user.userId.userId}]])">유저 차단
+                                                </button>
+
+                                                <!--삭제버튼-->
                                                 <button class="btn btn-danger fw-bold"
-                                                        th:onclick="blockUser([[${user.userId.userId}]])">차단
+                                                        th:onclick="|deleteReportLog(${user.reportNo})|">신고 삭제
                                                 </button>
                                             </div>
+
+
+
                                         </div>
                                     </div>
                                 </div>
@@ -110,38 +187,42 @@
 
 
                     <!-- 페이지네이션 -->
-                    <!-- 페이징 처리를 감싸는 컨테이너를 추가하여 가운데 정렬 -->
                     <div class="d-flex justify-content-center">
                         <nav aria-label="Page navigation">
-                            <ul class="pagination">
-                                <!-- 이전 버튼 -->
-                                <li class="page-item" th:class="${!pageResponse.prev} ? 'disabled' : ''">
+                            <ul class="pagination justify-content-center">
+
+                                <!-- 이전 -->
+                                <li class="page-item" th:if="${!pageResponse.prev}">
                                     <a class="page-link"
-                                       th:href="@{/admin/report-list(page=${pageResponse.page - 1}, size=${pageResponse.size})}"
+                                       th:href="@{/admin/report-list(page=${pageResponse.page - 1}, size=${pageResponse.size}, keyword=${searchKeyword})}"
                                        aria-label="Previous">
-                                        <span aria-hidden="true">&laquo;</span>
+                                        <i class="bi bi-caret-left-fill" aria-hidden="true"></i>
                                     </a>
                                 </li>
 
-                                <!-- 페이지 번호 반복 -->
-                                <li class="page-item"
-                                    th:each="pageNumber : ${#numbers.sequence(pageResponse.start, pageResponse.end)}">
-                                    <a class="page-link"
-                                       th:href="@{/admin/report-list(page=${pageNumber}, size=${pageResponse.size})}"
-                                       th:text="${pageNumber}"></a>
-                                </li>
+                                <!-- 페이지 번호 -->
+                                <th:block class="page-item"
+                                          th:each="pageNumber : ${#numbers.sequence(pageResponse.start, pageResponse.end)}">
+                                    <li th:class="${pageResponse.page == pageNumber} ? 'page-item active' : 'page-item'">
+                                        <a class="page-link"
+                                           th:data-num="${pageNumber}"
+                                           th:href="@{/admin/report-list(page=${pageNumber}, size=${pageResponse.size}, keyword=${searchKeyword})}">
+                                            [[${pageNumber}]]
+                                        </a>
+                                    </li>
+                                </th:block>
 
-                                <!-- 다음 버튼 -->
-                                <li class="page-item" th:class="${!pageResponse.next} ? 'disabled' : ''">
+                                <!-- 다음 -->
+                                <li class="page-item" th:if="${!pageResponse.next}">
                                     <a class="page-link"
-                                       th:href="@{/admin/report-list(page=${pageResponse.page + 1}, size=${pageResponse.size})}"
+                                       th:href="@{/admin/report-list(page=${pageResponse.page + 1}, size=${pageResponse.size}, keyword=${searchKeyword})}"
                                        aria-label="Next">
-                                        <span aria-hidden="true">&raquo;</span>
+                                        <i class="bi bi-caret-right-fill" aria-hidden="true"></i>
                                     </a>
                                 </li>
                             </ul>
                         </nav>
-                    </div>
+                    </div><!--페이지네이션-->
 
 
                 </div>
@@ -178,6 +259,12 @@
     }
 
     async function blockUser(userId) {
+        const isConfirmed = confirm(`유저아이디 : ${userId}  차단하시겠습니까?`);
+
+        if (!isConfirmed) {
+            return; // 사용자가 취소를 누르면 함수 종료
+        }
+
         try {
             const response = await fetch(`/admin/blockUser/${userId}`, {
                 method: 'POST',
@@ -186,15 +273,42 @@
                 }
             });
             if (response.ok) {
-                alert(`유저아이디 : ${userId} 차단 되었습니다.`);
+                alert('차단 되었습니다.');
                 location.reload(); // 페이지 새로 고침
             } else {
-                alert('Failed to block user.');
+                alert('차단에 실패했습니다.');
             }
         } catch (error) {
-            alert('Error blocking user: ' + error);
+            alert('에러발생: ' + error);
         }
     }
+
+    /*신고삭제*/
+    async function deleteReportLog(reportNo) {
+        try {
+            const isConfirmed = confirm(`신고를 삭제하시겠습니까?`);
+
+            if (!isConfirmed) {
+                return; // 사용자가 취소를 누르면 함수 종료
+            }
+
+            const response = await fetch(`/admin/deleteReportLog/${reportNo}`, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                }
+            });
+            if (response.ok) {
+                alert(`신고내역이 삭제 되었습니다.`);
+                location.reload(); // 페이지 새로 고침
+            } else {
+                alert('Failed to delete reportLog.');
+            }
+        } catch (error) {
+            alert('Error deleteReportLog: ' + error);
+        }
+    }
+
 </script>
 </body>
 </html>
