ROLE 권한에 따라 read, list view에 delete + modify 버튼 표시 부분 수정 머지시에 read, list에서 누락된 css부분 추가 게시글 작성시 경험치 증가부분 수정 관리자 권한이 있으면 게시글 삭제 가능하게 수정 체크박스 1개 선택시 alert 창 뜨는 문제 수정 통합검색 키워드 및 검색된 키워드 갯수 표시 댓글 삭제 관리자/본인 표시 완료 - 삭제까지 가능 QnA 글목록 비밀글 비밀글 입니다. 설정 / 비밀글을 작성한 본인 & 관리자는 게시판에서 보이게 설정

--- a/src/main/resources/static/css/board/list.css
+++ b/src/main/resources/static/css/board/list.css
@@ -143,6 +143,20 @@ td > a {
     --bs-btn-hover-bg: #67cafe;
 }
 
+.secret {
+    color: gray;
+}
+
+.secretPost {
+    font-size: 18px;
+    color: gray;
+    margin-bottom: 0;
+}
+
+.bi-file-lock {
+    font-size: 20px;
+}
+
 .noSearch {
     display: flex;
     justify-content: center;
@@ -164,6 +178,8 @@ td > a {
 
 .blank,
 .btnSection {
+    display: flex;
+    justify-content: flex-end;
     width: 180px;
 }
 
@@ -171,7 +187,9 @@ td > a {
     background-color: #E8FFFF;
     border-color: white;
     color: #000;
-    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-color: #000;
+    --bs-btn-hover-border-color: red;
+    --bs-btn-hover-bg: red;
 }
 
 .page-item .page-link {
