--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -93,6 +93,11 @@ td {
     overflow-y: hidden;
 }
 
+.boardEmpty {
+    text-align: center;
+    color: gray;
+}
+
 a {
     text-decoration: none;
     color: black;
