--- a/src/main/resources/templates/summernote/summernote.html
+++ b/src/main/resources/templates/summernote/summernote.html
@@ -336,6 +336,8 @@
                 url = '/board/modify_q';
                 formData.append('secret', secret);
                 formData.append('replyAuth', replyAuth);
+            } else {
+                url = '/board/modify';
             }
 
             console.log("imageUUIDs: ", imageUUIDs);
