--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -60,8 +60,7 @@
             <!--버튼-->
             <span>
                 <!--삭제 버튼 추가 / 권한에 따라 버튼 나타내기-->
-                <!--          <button class="btn ms-3 removeBtn" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">삭제</button>-->
-                <button class="btn btn-danger deleteBtn">글 삭제</button>
+                <button class="btn deleteBtn" th:if="${role eq 'ROLE_ADMIN'}">글 삭제</button>
                 </span> <!--버튼-->
         </div> <!--상단-->
 
@@ -74,16 +73,18 @@
                 <div>
                     <table class="table read">
                         <!--게시물 정보 받아오기-->
-                        <tbody>
-                        <tr th:each="dto:${responseDTO.dtoList}" class="list ps-3">
-                            <td class="align-middle checkBox">
+                        <tbody class="list ps-3">
+                        <!-- 게시글이 비밀글이 아닐 때 -->
+                        <tr th:each="dto:${responseDTO.dtoList}">
+                            <td class="align-middle checkBox" th:if="${role eq 'ROLE_ADMIN'}">
                                 <!--td에 추가 삭제 체크 박스 권한에 따라 버튼 나타내기-->
-                                <!--                  <input class="form-check-input" type="checkbox" id="" value="" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">-->
                                 <input class="align-items-center form-check-input" type="checkbox"
                                        th:value="${dto.postNo}"
                                        th:attr="data-postNo=${dto.postNo}">
                             </td>
-                            <td class="align-middle listOne">
+
+                            <!--비밀글이 아닐때-->
+                            <td class="align-middle listOne" th:if="${dto.secret==false} or (${dto.secret == true} and (${username} == ${dto.userId})) or ((${dto.secret == true} and (${username} != ${dto.userId}))and(${role} == 'ROLE_ADMIN'))">
                                 <a th:href="@{'/board/read/'+${dto.postNo}}">
                                     <div class="d-flex align-items-center">
                                         <div class="replyAuth" th:if="${dto.replyAuth==true}">
@@ -136,12 +137,33 @@
                                     </div>
                                 </a>
                             </td>
-                            <td class="text-end align-middle reply">
+
+                            <!--비밀글일때-->
+                            <td class="align-middle listOne" th:if="((${dto.secret==true} and (${username} != ${dto.userId}))and(${role} != 'ROLE_ADMIN'))">
+                                <!--비밀글여부-->
+                                <a th:href="@{'/board/read/'+${dto.postNo}}" class="d-flex align-items-center">
+                                <span class="icon secret">
+                                     <i class="bi bi-file-lock d-flex flex-fill"></i>
+                                </span>
+                                <p class="ms-2 secretPost d-flex flex-column justify-content-center">
+                                     비밀글입니다.
+                                </p>
+                                </a>
+                            </td>
+
+                            <!--비밀글이 아닐때-->
+                            <td class="text-end align-middle reply" th:if="${dto.secret==false} or (${dto.secret == true} and (${username} == ${dto.userId})) or ((${dto.secret == true} and (${username} != ${dto.userId}))and(${role} == 'ROLE_ADMIN'))">
                                 <button class="btn replyCountBtn"
                                         th:attr="data-postNo=${dto.postNo}">댓글수
                                     <span th:text="${dto?.replyCount}">5</span>
                                 </button>
                             </td>
+
+                            <!--비밀글이 일때-->
+                            <td class="text-end align-middle reply" th:if="((${dto.secret==true} and (${username} != ${dto.userId}))and(${role} != 'ROLE_ADMIN'))">
+
+                            </td>
+
                         </tr>
                         </tbody>
                     </table>
@@ -190,8 +212,7 @@
                 <button class="btn writeBtn register_qBtn" th:if="${boardCode eq 'qna'}">
                     <i class="bi bi-pencil-fill"></i>글쓰기</button>
                 <!--삭제 버튼 권한에 따라 버튼 나타내기-->
-                <!--<button class="btn ms-2 deleteBtn" th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">삭제</button>-->
-                <button class="btn btn-danger ms-2 deleteBtn">글 삭제</button>
+                <button class="btn ms-2 deleteBtn" th:if="${role eq 'ROLE_ADMIN'}">글 삭제</button>
             </span> <!--버튼-->
         </div> <!--하단-->
         <!-- 검색 -->
@@ -299,7 +320,7 @@
         button.addEventListener("click", function (e) {
             e.preventDefault();
             e.stopPropagation();
-            // TODO 게시글 하나 남아 있을 때 선택 후 삭제하면 에러메세지, 기능 작동안함
+
             // 선택된 체크박스들을 모두 찾음
             let checkboxes = document.querySelectorAll('.form-check-input:checked');
             let postNos = Array.from(checkboxes).map(checkbox => checkbox.getAttribute('data-postNo'));
@@ -319,14 +340,17 @@
                                 window.location.reload();
                             }
                         },
-                        error: function (error) {
-                            console.log('선택된 게시글이 없습니다: ' + error);
-                            alert('선택된 게시글이 없습니다');
+                        error: function () {
+                            completedRequests++;
+                            if (completedRequests === postNos.length) {
+                                // 모든 요청이 끝난 후 페이지 새로고침
+                                window.location.reload();
+                            }
                         }
                     });
                 });
             } else {
-                alert('삭제할 항목을 선택하세요.');
+                alert('선택된 게시글이 없습니다.');
             }
         });
     }, false)
